--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,24 @@
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>co.escuelaing.arep.microspringboot.MicroSpringBoot</exec.mainClass>
     </properties>
+    <dependencies>
+      
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.1</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+    <build>
+    <plugins>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version> 
+            </plugin>
+        </plugins>
+    </build>
 </project>
